// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultiInput with 4 default rows 1`] = `
<div>
  <div
    className="list-entry row"
  >
    <div
      className="col-xs-12 col-sm-9"
    >
      <label
        className="text-box-number-label"
        htmlFor="test-0"
      >
        1
        .
      </label>
      <input
        aria-describedby={undefined}
        className="uikit-text-input uikit-text-input--block multiInput"
        defaultValue=""
        id="test-0"
        name="test[]"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
      />
    </div>
  </div>
  <div
    className="list-entry row"
  >
    <div
      className="col-xs-12 col-sm-9"
    >
      <label
        className="text-box-number-label"
        htmlFor="test-1"
      >
        2
        .
      </label>
      <input
        aria-describedby={undefined}
        className="uikit-text-input uikit-text-input--block multiInput"
        defaultValue=""
        id="test-1"
        name="test[]"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
      />
    </div>
    <a
      href="#"
      onClick={[Function]}
    >
      remove 
      <span
        className="visuallyhidden"
      >
        number 
        2
      </span>
    </a>
  </div>
  <div
    className="list-entry row"
  >
    <div
      className="col-xs-12 col-sm-9"
    >
      <label
        className="text-box-number-label"
        htmlFor="test-2"
      >
        3
        .
      </label>
      <input
        aria-describedby={undefined}
        className="uikit-text-input uikit-text-input--block multiInput"
        defaultValue=""
        id="test-2"
        name="test[]"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
      />
    </div>
    <a
      href="#"
      onClick={[Function]}
    >
      remove 
      <span
        className="visuallyhidden"
      >
        number 
        3
      </span>
    </a>
  </div>
  <div
    className="list-entry row"
  >
    <div
      className="col-xs-12 col-sm-9"
    >
      <label
        className="text-box-number-label"
        htmlFor="test-3"
      >
        4
        .
      </label>
      <input
        aria-describedby={undefined}
        className="uikit-text-input uikit-text-input--block multiInput"
        defaultValue=""
        id="test-3"
        name="test[]"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
      />
    </div>
    <a
      href="#"
      onClick={[Function]}
    >
      remove 
      <span
        className="visuallyhidden"
      >
        number 
        4
      </span>
    </a>
  </div>
  <a
    href="#"
    onClick={[Function]}
  >
    Add another row
  </a>
</div>
`;

exports[`MultiInput with 4 rows 1`] = `
<div>
  <div
    className="list-entry row"
  >
    <div
      className="col-xs-12 col-sm-9"
    >
      <label
        className="text-box-number-label"
        htmlFor="test-0"
      >
        1
        .
      </label>
      <input
        aria-describedby={undefined}
        className="uikit-text-input uikit-text-input--block multiInput"
        defaultValue="One"
        id="test-0"
        name="test[]"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
      />
    </div>
  </div>
  <div
    className="list-entry row"
  >
    <div
      className="col-xs-12 col-sm-9"
    >
      <label
        className="text-box-number-label"
        htmlFor="test-1"
      >
        2
        .
      </label>
      <input
        aria-describedby={undefined}
        className="uikit-text-input uikit-text-input--block multiInput"
        defaultValue="Two"
        id="test-1"
        name="test[]"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
      />
    </div>
    <a
      href="#"
      onClick={[Function]}
    >
      remove 
      <span
        className="visuallyhidden"
      >
        number 
        2
      </span>
    </a>
  </div>
  <div
    className="list-entry row"
  >
    <div
      className="col-xs-12 col-sm-9"
    >
      <label
        className="text-box-number-label"
        htmlFor="test-2"
      >
        3
        .
      </label>
      <input
        aria-describedby={undefined}
        className="uikit-text-input uikit-text-input--block multiInput"
        defaultValue="Three"
        id="test-2"
        name="test[]"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
      />
    </div>
    <a
      href="#"
      onClick={[Function]}
    >
      remove 
      <span
        className="visuallyhidden"
      >
        number 
        3
      </span>
    </a>
  </div>
  <div
    className="list-entry row"
  >
    <div
      className="col-xs-12 col-sm-9"
    >
      <label
        className="text-box-number-label"
        htmlFor="test-3"
      >
        4
        .
      </label>
      <input
        aria-describedby={undefined}
        className="uikit-text-input uikit-text-input--block multiInput"
        defaultValue="Four"
        id="test-3"
        name="test[]"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
      />
    </div>
    <a
      href="#"
      onClick={[Function]}
    >
      remove 
      <span
        className="visuallyhidden"
      >
        number 
        4
      </span>
    </a>
  </div>
  <a
    href="#"
    onClick={[Function]}
  >
    Add another row
  </a>
</div>
`;

exports[`MultiInput with no props 1`] = `
<div>
  <div
    className="list-entry row"
  >
    <div
      className="col-xs-12 col-sm-9"
    >
      <label
        className="text-box-number-label"
        htmlFor="test-0"
      >
        1
        .
      </label>
      <input
        aria-describedby={undefined}
        className="uikit-text-input uikit-text-input--block multiInput"
        defaultValue=""
        id="test-0"
        name="test[]"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
      />
    </div>
  </div>
  <a
    href="#"
    onClick={[Function]}
  >
    Add another row
  </a>
</div>
`;
